--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,15 @@
     <string name="three">THREE</string>
     <string name="four">FOUR</string>
 
+    <array name="duoMenu">
+        <item>Home</item>
+        <item>Route</item>
+        <item>Sponsors</item>
+        <item>Team</item>
+        <item>About</item>
+    </array>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
